moving to laptop

--- a/partials/addmoney.html
+++ b/partials/addmoney.html
@@ -2,7 +2,7 @@
   <form name="myNewMoneyForm">
     <md-input-container>
       <label>Beskrivning</label>
-      <input ng-model="newMoney.desc" type="text" placeholder="Lön / Skatt / Såld vara" required>
+      <input ng-model="newMoney.desc" type="text" required>
     </md-input-container>
     <md-input-container>
       <label>Summa</label>
