--- a/partials/main.html
+++ b/partials/main.html
@@ -7,18 +7,22 @@
       </md-select>
     </md-input-container>
     <md-input-container>
-      <md-select placeholder="Månad" ng-model="selected.month" md-on-open="calculations()" style="min-width: 200px;" required>
-        <md-option ng-value="month" ng-repeat="month in monthsAvailable">{{month}}</md-option>
+      <md-select placeholder="Månad" ng-model="selected.month" md-on-open="dummy()" style="min-width: 200px;" required>
+        <md-option ng-click="calculations()" ng-value="month" ng-repeat="month in monthsAvailable">{{month}}</md-option>
       </md-select>
     </md-input-container>
   </form>
 </div>
+<button ng-click="showdata()">Showdata</button>
 
 <md-content class="md-padding">
   <md-card>
     <md-card-content>
-      <h2 class="md-title">Totalt in: {{ totalSalaryThisMonth }}</h2>
-      <span ng-repeat="x in salarysThisMonth">
+      <div layout="rows">
+        <h2 class="md-title">Totalt in:</h2>
+        <h2 class="md-title" ng-bind="totalSalarySelectedMonth"></h2>
+      </div>
+      <span ng-repeat="x in datasetSalary[0].data">
         {{x.type}} {{x.value}}<br>
       </span>
     </md-card-content>
@@ -27,7 +31,10 @@
 <md-content class="md-padding">
   <md-card>
     <md-card-content>
-      <h2 class="md-title">Totalt ut: {{ totalThisMonth }}</h2>
+      <div layout="rows">
+        <h2 class="md-title">Totalt ut:</h2>
+        <h2 class="md-title" ng-bind="totalCostSelectedMonth"></h2>
+      </div>
       {{ plusminusSign }} <span ng-bind="plusminus"></span> denna månad
       <section layout="row" layout-sm="row" layout-align="center center" layout-wrap>
         <md-button class="md-raised md-primary" ng-click="doNav('details-view')">Lista månad</md-button>
