--- a/public/partials/addsalary.html
+++ b/public/partials/addsalary.html
@@ -14,11 +14,11 @@
       </section>
       <md-input-container>
         <label>Beskrivning</label>
-        <input ng-model="newSalary.type" type="text" required>
+        <input ng-model="newSalary.category" type="text" required>
       </md-input-container>
       <md-input-container>
         <label>Summa</label>
-        <input ng-model="newSalary.value" type="number" step=1000 min=20 required>
+        <input ng-model="newSalary.value" type="number" required>
       </md-input-container>
     </form>
     <div layout="columns">
