--- a/public/partials/details.html
+++ b/public/partials/details.html
@@ -14,7 +14,7 @@
   </form>
 </div>
 <div ng-show="!datasetCosts.length" layout="column" layout-align="center center">
-  <p>Här var de tomt :)</p>
+  <p>Här var de tomt..</p>
 </div>
 <md-content ng-show="datasetCosts.length" class="md-padding">
   <md-card>
@@ -23,12 +23,17 @@
         <md-list>
           <md-list-item class="md-3-line" ng-repeat="item in datasetCosts">
             <div class="md-list-item-text">
-              <h3>{{item.amount}}</h3>
-              <h4>{{item.category}}</h4>
-              <p>{{item.date}}</p>
-              <p>{{item.by}}</p>
+              <div flex layout="row">
+                <md-content flex layout="column">
+                  <h3>{{item.amount}} {{item.category}}</h3>
+                  <p>{{item.by}} {{item.date | date : 'yyyy-MM-dd'}}</p>
+                </md-content>
+                <md-button aria-label="Radera" ng-click="editCost($event, item)" class="md-fab md-mini md-raised" layout-align="right right">
+                  <ng-md-icon icon="mode_edit" fill="black"></ng-md-icon>
+                </md-button>
+              </div>
             </div>
-            <md-divider ng-if="!$last"></md-divider>
+            <!--<md-divider ng-if="!$last"></md-divider>-->
           </md-list-item>
         </md-list>
       </md-content>
