--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -21,9 +21,32 @@
         <h2 class="md-title">Totalt in:</h2>
         <h2 class="md-title" ng-bind="totalSalarySelectedMonth"></h2>
       </div>
-      <span ng-repeat="x in datasetSalary">
-        {{x.by}} - {{x.category}} {{x.value}}<br>
-      </span>
+      <!--<span ng-repeat="x in datasetSalary">
+        <div flex layout="row">
+          <md-content flex layout="column">
+            {{x.by}} - {{x.category}} {{x.value}}
+            <md-button aria-label="Radera" ng-click="editSalary($event, x)" class="md-fab md-mini md-raised" layout-align="right right">
+              <ng-md-icon icon="mode_edit" fill="black"></ng-md-icon>
+            </md-button>
+          </md-content>
+        </div>
+      </span>-->
+      <md-list>
+          <md-list-item class="md-3-line" ng-repeat="x in datasetSalary">
+            <div class="md-list-item-text">
+              <div flex layout="row">
+                <md-content flex layout="column">
+                  <h3>{{x.value}} {{x.category}}</h3>
+                  <p>{{x.by}} {{x.date | date : 'yyyy-MM-dd'}}</p>
+                </md-content>
+                <md-button aria-label="Radera" ng-click="editSalary($event, x)" class="md-fab md-mini md-raised" layout-align="right right">
+                  <ng-md-icon icon="mode_edit" fill="black"></ng-md-icon>
+                </md-button>
+              </div>
+            </div>
+            <!--<md-divider ng-if="!$last"></md-divider>-->
+          </md-list-item>
+        </md-list>
     </md-card-content>
   </md-card>
 </md-content>
@@ -35,8 +58,9 @@
         <h2 class="md-title" ng-bind="totalCostSelectedMonth"></h2>
       </div>
       {{ plusminusSign }}<span ng-bind="plusminus"></span> denna månad
+      <br><br>
       <section layout="row" layout-sm="row" layout-align="center center" layout-wrap>
-        <md-button class="md-raised md-primary" ng-click="doNav('details-view')">Lista månad</md-button>
+        <md-button class="md-raised md-primary" ng-click="doNav('details-view')">Visa kostnader</md-button>
       </section>
     </md-card-content>
   </md-card>
