--- a/public/partials/graph.html
+++ b/public/partials/graph.html
@@ -1,8 +1,4 @@
-<div ng-controller="charts">
-  <section layout="row" layout-sm="row" layout-align="center center" layout-wrap>
-    <md-button class="md-raised md-primary">Primary</md-button>
-    <md-button class="md-raised md-primary">Primary</md-button>
-    <md-button class="md-raised md-primary">Primary</md-button>
-  </section>
-  <div google-chart chart="chartObject" style="height:80%; width:100%"></div>
+<div ng-controller="compareCharts">
+  <div google-chart chart="chartObject" style="height:80%; width:100%">
+  </div>
 </div>
