sort ascending data when displayed

--- a/public/partials/addcost.html
+++ b/public/partials/addcost.html
@@ -13,7 +13,7 @@
         </md-button>
       </section>
       <md-input-container>
-        <label>Notering</label>
+        <label>Beskrivning (frivilligt)</label>
         <input ng-model="newCost.desc" type="text">
       </md-input-container>    
       <md-select placeholder="Välj kategori" ng-model="newCost.category" md-on-open="loadCategories()" style="min-width: 200px;" required>
