--- a/public/partials/details.html
+++ b/public/partials/details.html
@@ -21,7 +21,7 @@
     <md-card-content>
       <md-content>
         <md-list>
-          <md-list-item class="md-3-line" ng-repeat="item in datasetCosts">
+          <md-list-item class="md-3-line" ng-repeat="item in datasetCosts | orderBy: '-date'">
             <div class="md-list-item-text">
               <div flex layout="row">
                 <md-content flex layout="column">
