--- a/public/partials/addsalary.html
+++ b/public/partials/addsalary.html
@@ -1,29 +1,34 @@
-<div layout="column" layout-align="center center" style="padding:40px">
-  <h3>Lägg till inkomst</h3>
-  <div ng-show="!$storage.username">
-    <center><ng-md-icon icon="warning" style="fill: red" size="40"></ng-md-icon></center>
-    <p>Gå till inställningar och ange ditt namn.</p>
-  </div>
-  <div ng-hide="!$storage.username">
-    <form name="myNewMoneyForm">
-      <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-        <md-datepicker ng-model="selected.date" md-placeholder="Ange datum" required style="padding-right: 20px"></md-datepicker>
-        <md-button ng-click="resetDate()" class="md-fab md-warn md-mini md-raised" aria-label="Dagens datum">
-            <ng-md-icon icon="history" fill="white"></ng-md-icon>
-        </md-button>
-      </section>
-      <md-input-container>
-        <label>Beskrivning</label>
-        <input ng-model="newSalary.category" type="text" required>
-      </md-input-container>
-      <md-input-container>
-        <label>Summa</label>
-        <input ng-model="newSalary.value" type="number" required>
-      </md-input-container>
-    </form>
-    <div layout="columns">
-      <md-button ng-click="clearSalary()" class="md-raised md-warn" layout layout-align="center center">Rensa</md-button>
-      <md-button ng-click="saveSalary()" ng-disabled="myNewMoneyForm.$invalid" class="md-raised md-primary">Spara</md-button>
-    </section>
-  </div>
+<div class="md-padding">
+  <md-card>
+    <i class="md-padding">Ny inkomst</i>
+    <md-card-content>
+      <div layout="column" layout-align="center center" ng-show="!$storage.username">
+        <ng-md-icon icon="warning" style="fill: red" size="40"></ng-md-icon>
+        <br>
+        <span>Gå till inställningar och ange ditt namn.</span>
+      </div>
+      <div ng-hide="!$storage.username">
+        <div layout="row" layout-align="center center">
+          <md-datepicker ng-model="selected.date" md-placeholder="Ange datum" required style="padding-right: 20px"></md-datepicker>
+          <md-button ng-click="resetDate()" class="md-fab md-warn md-mini md-raised" aria-label="Dagens datum">
+              <ng-md-icon icon="history" fill="white"></ng-md-icon>
+          </md-button>
+        </div>
+        <div layout="column">
+          <md-input-container>
+            <label>Beskrivning</label>
+            <input ng-model="newSalary.category" type="text" required>
+          </md-input-container>
+          <md-input-container>
+            <label>Summa</label>
+            <input ng-model="newSalary.value" type="number" required>
+          </md-input-container>
+        </div>
+        <div layout="columns" layout-align="center center">
+          <md-button ng-click="clearSalary()" class="md-raised md-warn" layout layout-align="center center">Rensa</md-button>
+          <md-button ng-click="saveSalary()" ng-disabled="myNewMoneyForm.$invalid" class="md-raised md-primary">Spara</md-button>
+        </div>
+      </div>
+    </md-content>
+  </md-card>
 </div>
