--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -31,14 +31,14 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body layout="column" ng-controller="AppCtrl" ng-cloak>
-    <md-toolbar layout="row">      
+    <md-toolbar layout="row">
       <div class="md-toolbar-tools">
         <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
           <ng-md-icon aria-label="Menu" icon="menu" style="fill: white" size="24"></ng-md-icon>
         </md-button>
         <img class="barlogo" src="icons/Eko-logo.svg" alt="Eko">
       </div>
-      <md-button ng-click="fetchData()" aria-label="Refresh"><ng-md-icon icon="refresh" style="fill: white" size="24"></ng-md-icon></md-button>      
+      <md-button ng-click="fetchData()" aria-label="Refresh"><ng-md-icon icon="refresh" style="fill: white" size="24"></ng-md-icon></md-button>
     </md-toolbar>
     <div layout="row" flex>
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
@@ -53,6 +53,7 @@
           <md-button class="md-primary" ng-click="doNav('details')">Lista kostnader</md-button>
           <md-button class="md-primary" ng-click="doNav('addcost')">Lägg till kostnad</md-button>
           <md-button class="md-primary" ng-click="doNav('addsalary')">Lägg till inkomst</md-button>
+          <md-button class="md-primary" ng-click="doNav('categories')">Kategorier</md-button>
           <md-button class="md-primary" ng-click="doNav('settings')">Inställningar</md-button>
         </md-sidenav>
         <md-content flex>
